resume hw changed

--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -73,7 +73,7 @@
         </section>
     </article>
     <footer>
-        <p>&copy; 2024 Иван Иванов</p>
+        <p>&copy; 2024 Мирошниченко Андрей</p>
     </footer>
 </body>
 </html>
